// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 1`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class ApiResponse : IEquatable<ApiResponse>
    {
        public ApiResponse(
                [JsonProperty(PropertyName=\\"code\\")] int? Code, 
                [JsonProperty(PropertyName=\\"type\\")] string Type, 
                [JsonProperty(PropertyName=\\"message\\")] string Message
            )
        { 
            this.Code = Code;
            this.Type = Type;
            this.Message = Message;
        }

        
        /// <summary>
        /// Gets Code
        /// </summary>
        [JsonProperty(PropertyName=\\"code\\")]
        public int? Code { get; }

        /// <summary>
        /// Gets Type
        /// </summary>
        [JsonProperty(PropertyName=\\"type\\")]
        public string Type { get; }

        /// <summary>
        /// Gets Message
        /// </summary>
        [JsonProperty(PropertyName=\\"message\\")]
        public string Message { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((ApiResponse)obj);
        }

        public bool Equals(ApiResponse other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Code == other.Code ||
                    Code != null &&
                    Code.Equals(other.Code)
                ) && 
                (
                    Type == other.Type ||
                    Type != null &&
                    Type.Equals(other.Type)
                ) && 
                (
                    Message == other.Message ||
                    Message != null &&
                    Message.Equals(other.Message)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Code != null)
                    hashCode = hashCode * 59 + Code.GetHashCode();
                if (Type != null)
                    hashCode = hashCode * 59 + Type.GetHashCode();
                if (Message != null)
                    hashCode = hashCode * 59 + Message.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 2`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Category : IEquatable<Category>
    {
        public Category(
                [JsonProperty(PropertyName=\\"id\\")] long? Id, 
                [JsonProperty(PropertyName=\\"name\\")] string Name
            )
        { 
            this.Id = Id;
            this.Name = Name;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        /// <summary>
        /// Gets Name
        /// </summary>
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Category)obj);
        }

        public bool Equals(Category other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                ) && 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 3`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class InlineObject : IEquatable<InlineObject>
    {
        public InlineObject(
                [JsonProperty(PropertyName=\\"name\\")] string Name, 
                [JsonProperty(PropertyName=\\"status\\")] string Status
            )
        { 
            this.Name = Name;
            this.Status = Status;
        }

        
        /// <summary>
        /// Gets Updated name of the pet
        /// </summary>
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        /// <summary>
        /// Gets Updated status of the pet
        /// </summary>
        [JsonProperty(PropertyName=\\"status\\")]
        public string Status { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((InlineObject)obj);
        }

        public bool Equals(InlineObject other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                ) && 
                (
                    Status == other.Status ||
                    Status != null &&
                    Status.Equals(other.Status)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                if (Status != null)
                    hashCode = hashCode * 59 + Status.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 4`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Order : IEquatable<Order>
    {
        public Order(
                [JsonProperty(PropertyName=\\"id\\")] long? Id, 
                [JsonProperty(PropertyName=\\"petId\\")] long? PetId, 
                [JsonProperty(PropertyName=\\"quantity\\")] int? Quantity, 
                [JsonProperty(PropertyName=\\"shipDate\\")] DateTimeOffset ShipDate, 
                [JsonProperty(PropertyName=\\"status\\")] StatusEnum? Status, 
                [JsonProperty(PropertyName=\\"complete\\")] bool? Complete
            )
        { 
            this.Id = Id;
            this.PetId = PetId;
            this.Quantity = Quantity;
            this.ShipDate = ShipDate;
            this.Status = Status;
            this.Complete = Complete;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        /// <summary>
        /// Gets PetId
        /// </summary>
        [JsonProperty(PropertyName=\\"petId\\")]
        public long? PetId { get; }

        /// <summary>
        /// Gets Quantity
        /// </summary>
        [JsonProperty(PropertyName=\\"quantity\\")]
        public int? Quantity { get; }

        /// <summary>
        /// Gets ShipDate
        /// </summary>
        [JsonProperty(PropertyName=\\"shipDate\\")]
        public DateTimeOffset ShipDate { get; }

        /// <summary>
        /// Order Status
        /// </summary>
        /// <value>Order Status</value>
        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
        public enum StatusEnum
        {
            
            /// <summary>
            /// Enum PlacedEnum for placed
            /// </summary>
            [EnumMember(Value = \\"placed\\")]
            PlacedEnum = 1,
            
            /// <summary>
            /// Enum ApprovedEnum for approved
            /// </summary>
            [EnumMember(Value = \\"approved\\")]
            ApprovedEnum = 2,
            
            /// <summary>
            /// Enum DeliveredEnum for delivered
            /// </summary>
            [EnumMember(Value = \\"delivered\\")]
            DeliveredEnum = 3
        }
        /// <summary>
        /// Gets Order Status
        /// </summary>
        [JsonProperty(PropertyName=\\"status\\")]
        public StatusEnum? Status { get; }

        /// <summary>
        /// Gets Complete
        /// </summary>
        [JsonProperty(PropertyName=\\"complete\\")]
        public bool? Complete { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Order)obj);
        }

        public bool Equals(Order other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                ) && 
                (
                    PetId == other.PetId ||
                    PetId != null &&
                    PetId.Equals(other.PetId)
                ) && 
                (
                    Quantity == other.Quantity ||
                    Quantity != null &&
                    Quantity.Equals(other.Quantity)
                ) && 
                (
                    ShipDate == other.ShipDate ||
                    ShipDate != null &&
                    ShipDate.Equals(other.ShipDate)
                ) && 
                (
                    Status == other.Status ||
                    Status.Equals(other.Status)
                ) && 
                (
                    Complete == other.Complete ||
                    Complete != null &&
                    Complete.Equals(other.Complete)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                if (PetId != null)
                    hashCode = hashCode * 59 + PetId.GetHashCode();
                if (Quantity != null)
                    hashCode = hashCode * 59 + Quantity.GetHashCode();
                if (ShipDate != null)
                    hashCode = hashCode * 59 + ShipDate.GetHashCode();
                if (Status != null)
                    hashCode = hashCode * 59 + Status.GetHashCode();
                if (Complete != null)
                    hashCode = hashCode * 59 + Complete.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 5`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Pet : IEquatable<Pet>
    {
        public Pet(
                [JsonProperty(PropertyName=\\"id\\")] long? Id, 
                [JsonProperty(PropertyName=\\"category\\")] Category Category, 
                [JsonProperty(PropertyName=\\"name\\"), Required] string Name, 
                [JsonProperty(PropertyName=\\"photoUrls\\"), Required] IReadOnlyList<string> PhotoUrls, 
                [JsonProperty(PropertyName=\\"tags\\")] IReadOnlyList<Tag> Tags, 
                [JsonProperty(PropertyName=\\"status\\")] StatusEnum? Status
            )
        { 
            this.Id = Id;
            this.Category = Category;
            this.Name = Name;
            this.PhotoUrls = PhotoUrls;
            this.Tags = Tags;
            this.Status = Status;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        /// <summary>
        /// Gets Category
        /// </summary>
        [JsonProperty(PropertyName=\\"category\\")]
        public Category Category { get; }

        /// <summary>
        /// Gets Name
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        /// <summary>
        /// Gets PhotoUrls
        /// </summary>
        [Required]
        [JsonProperty(PropertyName=\\"photoUrls\\")]
        public IReadOnlyList<string> PhotoUrls { get; }

        /// <summary>
        /// Gets Tags
        /// </summary>
        [JsonProperty(PropertyName=\\"tags\\")]
        public IReadOnlyList<Tag> Tags { get; }

        /// <summary>
        /// pet status in the store
        /// </summary>
        /// <value>pet status in the store</value>
        [JsonConverter(typeof(Newtonsoft.Json.Converters.StringEnumConverter))]
        public enum StatusEnum
        {
            
            /// <summary>
            /// Enum AvailableEnum for available
            /// </summary>
            [EnumMember(Value = \\"available\\")]
            AvailableEnum = 1,
            
            /// <summary>
            /// Enum PendingEnum for pending
            /// </summary>
            [EnumMember(Value = \\"pending\\")]
            PendingEnum = 2,
            
            /// <summary>
            /// Enum SoldEnum for sold
            /// </summary>
            [EnumMember(Value = \\"sold\\")]
            SoldEnum = 3
        }
        /// <summary>
        /// Gets pet status in the store
        /// </summary>
        [JsonProperty(PropertyName=\\"status\\")]
        public StatusEnum? Status { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Pet)obj);
        }

        public bool Equals(Pet other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                ) && 
                (
                    Category == other.Category ||
                    Category != null &&
                    Category.Equals(other.Category)
                ) && 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                ) && 
                (
                    PhotoUrls == other.PhotoUrls ||
                    PhotoUrls != null &&
                    PhotoUrls.SequenceEqual(other.PhotoUrls)
                ) && 
                (
                    Tags == other.Tags ||
                    Tags != null &&
                    Tags.SequenceEqual(other.Tags)
                ) && 
                (
                    Status == other.Status ||
                    Status.Equals(other.Status)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                if (Category != null)
                    hashCode = hashCode * 59 + Category.GetHashCode();
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                if (PhotoUrls != null)
                    hashCode = hashCode * 59 + PhotoUrls.GetHashCode();
                if (Tags != null)
                    hashCode = hashCode * 59 + Tags.GetHashCode();
                if (Status != null)
                    hashCode = hashCode * 59 + Status.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 6`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Collections.Generic;
using System.Threading.Tasks;
using Microsoft.AspNetCore.Authorization;
using Microsoft.AspNetCore.Mvc;
using Newtonsoft.Json;
using System.ComponentModel.DataAnnotations;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public interface IPetApiClient
    { 
        /// <summary>
        /// Add a new pet to the store
        /// </summary>
        /// <param name=\\"pet\\">Pet object that needs to be added to the store</param>
        Task<PetApiClient.TypeSafeAddPetResult> AddPet(
            Pet pet);

        /// <summary>
        /// Deletes a pet
        /// </summary>
        /// <param name=\\"petId\\">Pet id to delete</param>
        /// <param name=\\"apiKey\\"></param>
        Task<PetApiClient.TypeSafeDeletePetResult> DeletePet(
            long? petId,
            string apiKey);

        /// <summary>
        /// Finds Pets by status
        /// </summary>
        /// <remarks>Multiple status values can be provided with comma separated strings</remarks>
        /// <param name=\\"status\\">Status values that need to be considered for filter</param>
        Task<PetApiClient.TypeSafeFindPetsByStatusResult> FindPetsByStatus(
            IReadOnlyList<string> status);

        /// <summary>
        /// Finds Pets by tags
        /// </summary>
        /// <remarks>Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.</remarks>
        /// <param name=\\"tags\\">Tags to filter by</param>
        Task<PetApiClient.TypeSafeFindPetsByTagsResult> FindPetsByTags(
            IReadOnlyList<string> tags);

        /// <summary>
        /// Find pet by ID
        /// </summary>
        /// <remarks>Returns a single pet</remarks>
        /// <param name=\\"petId\\">ID of pet to return</param>
        Task<PetApiClient.TypeSafeGetPetByIdResult> GetPetById(
            long? petId);

        /// <summary>
        /// Update an existing pet
        /// </summary>
        /// <param name=\\"pet\\">Pet object that needs to be added to the store</param>
        Task<PetApiClient.TypeSafeUpdatePetResult> UpdatePet(
            Pet pet);

        /// <summary>
        /// Updates a pet in the store with form data
        /// </summary>
        /// <param name=\\"petId\\">ID of pet that needs to be updated</param>
        /// <param name=\\"name\\">Updated name of the pet</param>
        /// <param name=\\"status\\">Updated status of the pet</param>
        Task<PetApiClient.TypeSafeUpdatePetWithFormResult> UpdatePetWithForm(
            long? petId,
            string name,
            string status);

        /// <summary>
        /// uploads an image
        /// </summary>
        /// <param name=\\"petId\\">ID of pet to update</param>
        /// <param name=\\"body\\"></param>
        Task<PetApiClient.TypeSafeUploadFileResult> UploadFile(
            long? petId,
            System.IO.Stream body);
    }

    public class PetApiClientConfiguration
    {
        public string BaseUrl { get; set; }
    }

    /// <summary>
    /// 
    /// </summary>
    public sealed class PetApiClient : IPetApiClient
    {
        private readonly HttpClient httpClient;
        private readonly PetApiClientConfiguration configuration;

        public PetApiClient(HttpClient httpClient, PetApiClientConfiguration configuration)
        {
            this.httpClient = httpClient;
            this.configuration = configuration;
        }

        /// <summary>
        /// Add a new pet to the store
        /// </summary>
        /// <param name=\\"pet\\">Pet object that needs to be added to the store</param>
        public Task<TypeSafeAddPetResult> AddPet(
            Pet pet) =>
            throw new NotImplementedException();

        /// <summary>
        /// Deletes a pet
        /// </summary>
        /// <param name=\\"petId\\">Pet id to delete</param>
        /// <param name=\\"apiKey\\"></param>
        public Task<TypeSafeDeletePetResult> DeletePet(
            long? petId,
            string apiKey) =>
            throw new NotImplementedException();

        /// <summary>
        /// Finds Pets by status
        /// </summary>
        /// <remarks>Multiple status values can be provided with comma separated strings</remarks>
        /// <param name=\\"status\\">Status values that need to be considered for filter</param>
        public Task<TypeSafeFindPetsByStatusResult> FindPetsByStatus(
            IReadOnlyList<string> status) =>
            throw new NotImplementedException();

        /// <summary>
        /// Finds Pets by tags
        /// </summary>
        /// <remarks>Muliple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.</remarks>
        /// <param name=\\"tags\\">Tags to filter by</param>
        public Task<TypeSafeFindPetsByTagsResult> FindPetsByTags(
            IReadOnlyList<string> tags) =>
            throw new NotImplementedException();

        /// <summary>
        /// Find pet by ID
        /// </summary>
        /// <remarks>Returns a single pet</remarks>
        /// <param name=\\"petId\\">ID of pet to return</param>
        public Task<TypeSafeGetPetByIdResult> GetPetById(
            long? petId) =>
            throw new NotImplementedException();

        /// <summary>
        /// Update an existing pet
        /// </summary>
        /// <param name=\\"pet\\">Pet object that needs to be added to the store</param>
        public Task<TypeSafeUpdatePetResult> UpdatePet(
            Pet pet) =>
            throw new NotImplementedException();

        /// <summary>
        /// Updates a pet in the store with form data
        /// </summary>
        /// <param name=\\"petId\\">ID of pet that needs to be updated</param>
        /// <param name=\\"name\\">Updated name of the pet</param>
        /// <param name=\\"status\\">Updated status of the pet</param>
        public Task<TypeSafeUpdatePetWithFormResult> UpdatePetWithForm(
            long? petId,
            string name,
            string status) =>
            throw new NotImplementedException();

        /// <summary>
        /// uploads an image
        /// </summary>
        /// <param name=\\"petId\\">ID of pet to update</param>
        /// <param name=\\"body\\"></param>
        public Task<TypeSafeUploadFileResult> UploadFile(
            long? petId,
            System.IO.Stream body) =>
            throw new NotImplementedException();


        public readonly struct TypeSafeAddPetResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeAddPetResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeAddPetResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid input</summary>
            public static TypeSafeAddPetResult StatusCode405() =>
                new TypeSafeAddPetResult(405);
        }


        public readonly struct TypeSafeDeletePetResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeDeletePetResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeDeletePetResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid ID supplied</summary>
            public static TypeSafeDeletePetResult StatusCode400() =>
                new TypeSafeDeletePetResult(400);

            /// <summary>Pet not found</summary>
            public static TypeSafeDeletePetResult StatusCode404() =>
                new TypeSafeDeletePetResult(404);
        }


        public readonly struct TypeSafeFindPetsByStatusResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeFindPetsByStatusResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeFindPetsByStatusResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeFindPetsByStatusResult StatusCode200(IReadOnlyList<Pet> result) =>
                new TypeSafeFindPetsByStatusResult(200, result);

            /// <summary>Invalid status value</summary>
            public static TypeSafeFindPetsByStatusResult StatusCode400() =>
                new TypeSafeFindPetsByStatusResult(400);
        }


        public readonly struct TypeSafeFindPetsByTagsResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeFindPetsByTagsResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeFindPetsByTagsResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeFindPetsByTagsResult StatusCode200(IReadOnlyList<Pet> result) =>
                new TypeSafeFindPetsByTagsResult(200, result);

            /// <summary>Invalid tag value</summary>
            public static TypeSafeFindPetsByTagsResult StatusCode400() =>
                new TypeSafeFindPetsByTagsResult(400);
        }


        public readonly struct TypeSafeGetPetByIdResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeGetPetByIdResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeGetPetByIdResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeGetPetByIdResult StatusCode200(Pet result) =>
                new TypeSafeGetPetByIdResult(200, result);

            /// <summary>Invalid ID supplied</summary>
            public static TypeSafeGetPetByIdResult StatusCode400() =>
                new TypeSafeGetPetByIdResult(400);

            /// <summary>Pet not found</summary>
            public static TypeSafeGetPetByIdResult StatusCode404() =>
                new TypeSafeGetPetByIdResult(404);
        }


        public readonly struct TypeSafeUpdatePetResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeUpdatePetResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeUpdatePetResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid ID supplied</summary>
            public static TypeSafeUpdatePetResult StatusCode400() =>
                new TypeSafeUpdatePetResult(400);

            /// <summary>Pet not found</summary>
            public static TypeSafeUpdatePetResult StatusCode404() =>
                new TypeSafeUpdatePetResult(404);

            /// <summary>Validation exception</summary>
            public static TypeSafeUpdatePetResult StatusCode405() =>
                new TypeSafeUpdatePetResult(405);
        }


        public readonly struct TypeSafeUpdatePetWithFormResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeUpdatePetWithFormResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeUpdatePetWithFormResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid input</summary>
            public static TypeSafeUpdatePetWithFormResult StatusCode405() =>
                new TypeSafeUpdatePetWithFormResult(405);
        }


        public readonly struct TypeSafeUploadFileResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeUploadFileResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeUploadFileResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeUploadFileResult StatusCode200(ApiResponse result) =>
                new TypeSafeUploadFileResult(200, result);
        }

    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 7`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Collections.Generic;
using System.Threading.Tasks;
using Microsoft.AspNetCore.Authorization;
using Microsoft.AspNetCore.Mvc;
using Newtonsoft.Json;
using System.ComponentModel.DataAnnotations;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public interface IStoreApiClient
    { 
        /// <summary>
        /// Delete purchase order by ID
        /// </summary>
        /// <remarks>For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors</remarks>
        /// <param name=\\"orderId\\">ID of the order that needs to be deleted</param>
        Task<StoreApiClient.TypeSafeDeleteOrderResult> DeleteOrder(
            long? orderId);

        /// <summary>
        /// Returns pet inventories by status
        /// </summary>
        /// <remarks>Returns a map of status codes to quantities</remarks>
        Task<StoreApiClient.TypeSafeGetInventoryResult> GetInventory();

        /// <summary>
        /// Find purchase order by ID
        /// </summary>
        /// <remarks>For valid response try integer IDs with value &gt;&#x3D; 1 and &lt;&#x3D; 10. Other values will generated exceptions</remarks>
        /// <param name=\\"orderId\\">ID of pet that needs to be fetched</param>
        Task<StoreApiClient.TypeSafeGetOrderByIdResult> GetOrderById(
            long? orderId);

        /// <summary>
        /// Place an order for a pet
        /// </summary>
        /// <param name=\\"order\\">order placed for purchasing the pet</param>
        Task<StoreApiClient.TypeSafePlaceOrderResult> PlaceOrder(
            Order order);
    }

    public class StoreApiClientConfiguration
    {
        public string BaseUrl { get; set; }
    }

    /// <summary>
    /// 
    /// </summary>
    public sealed class StoreApiClient : IStoreApiClient
    {
        private readonly HttpClient httpClient;
        private readonly StoreApiClientConfiguration configuration;

        public StoreApiClient(HttpClient httpClient, StoreApiClientConfiguration configuration)
        {
            this.httpClient = httpClient;
            this.configuration = configuration;
        }

        /// <summary>
        /// Delete purchase order by ID
        /// </summary>
        /// <remarks>For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors</remarks>
        /// <param name=\\"orderId\\">ID of the order that needs to be deleted</param>
        public Task<TypeSafeDeleteOrderResult> DeleteOrder(
            long? orderId) =>
            throw new NotImplementedException();

        /// <summary>
        /// Returns pet inventories by status
        /// </summary>
        /// <remarks>Returns a map of status codes to quantities</remarks>
        public Task<TypeSafeGetInventoryResult> GetInventory() =>
            throw new NotImplementedException();

        /// <summary>
        /// Find purchase order by ID
        /// </summary>
        /// <remarks>For valid response try integer IDs with value &gt;&#x3D; 1 and &lt;&#x3D; 10. Other values will generated exceptions</remarks>
        /// <param name=\\"orderId\\">ID of pet that needs to be fetched</param>
        public Task<TypeSafeGetOrderByIdResult> GetOrderById(
            long? orderId) =>
            throw new NotImplementedException();

        /// <summary>
        /// Place an order for a pet
        /// </summary>
        /// <param name=\\"order\\">order placed for purchasing the pet</param>
        public Task<TypeSafePlaceOrderResult> PlaceOrder(
            Order order) =>
            throw new NotImplementedException();


        public readonly struct TypeSafeDeleteOrderResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeDeleteOrderResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeDeleteOrderResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid ID supplied</summary>
            public static TypeSafeDeleteOrderResult StatusCode400() =>
                new TypeSafeDeleteOrderResult(400);

            /// <summary>Order not found</summary>
            public static TypeSafeDeleteOrderResult StatusCode404() =>
                new TypeSafeDeleteOrderResult(404);
        }


        public readonly struct TypeSafeGetInventoryResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeGetInventoryResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeGetInventoryResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeGetInventoryResult StatusCode200(Dictionary<string, int?> result) =>
                new TypeSafeGetInventoryResult(200, result);
        }


        public readonly struct TypeSafeGetOrderByIdResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeGetOrderByIdResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeGetOrderByIdResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeGetOrderByIdResult StatusCode200(Order result) =>
                new TypeSafeGetOrderByIdResult(200, result);

            /// <summary>Invalid ID supplied</summary>
            public static TypeSafeGetOrderByIdResult StatusCode400() =>
                new TypeSafeGetOrderByIdResult(400);

            /// <summary>Order not found</summary>
            public static TypeSafeGetOrderByIdResult StatusCode404() =>
                new TypeSafeGetOrderByIdResult(404);
        }


        public readonly struct TypeSafePlaceOrderResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafePlaceOrderResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafePlaceOrderResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafePlaceOrderResult StatusCode200(Order result) =>
                new TypeSafePlaceOrderResult(200, result);

            /// <summary>Invalid Order</summary>
            public static TypeSafePlaceOrderResult StatusCode400() =>
                new TypeSafePlaceOrderResult(400);
        }

    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 8`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class Tag : IEquatable<Tag>
    {
        public Tag(
                [JsonProperty(PropertyName=\\"id\\")] long? Id, 
                [JsonProperty(PropertyName=\\"name\\")] string Name
            )
        { 
            this.Id = Id;
            this.Name = Name;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        /// <summary>
        /// Gets Name
        /// </summary>
        [JsonProperty(PropertyName=\\"name\\")]
        public string Name { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((Tag)obj);
        }

        public bool Equals(Tag other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                ) && 
                (
                    Name == other.Name ||
                    Name != null &&
                    Name.Equals(other.Name)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                if (Name != null)
                    hashCode = hashCode * 59 + Name.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 9`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Linq;
using System.Text;
using System.Collections.Generic;
using System.Runtime.Serialization;
using System.ComponentModel.DataAnnotations;
using Newtonsoft.Json;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public partial class User : IEquatable<User>
    {
        public User(
                [JsonProperty(PropertyName=\\"id\\")] long? Id, 
                [JsonProperty(PropertyName=\\"username\\")] string Username, 
                [JsonProperty(PropertyName=\\"firstName\\")] string FirstName, 
                [JsonProperty(PropertyName=\\"lastName\\")] string LastName, 
                [JsonProperty(PropertyName=\\"email\\")] string Email, 
                [JsonProperty(PropertyName=\\"password\\")] string Password, 
                [JsonProperty(PropertyName=\\"phone\\")] string Phone, 
                [JsonProperty(PropertyName=\\"userStatus\\")] int? UserStatus
            )
        { 
            this.Id = Id;
            this.Username = Username;
            this.FirstName = FirstName;
            this.LastName = LastName;
            this.Email = Email;
            this.Password = Password;
            this.Phone = Phone;
            this.UserStatus = UserStatus;
        }

        
        /// <summary>
        /// Gets Id
        /// </summary>
        [JsonProperty(PropertyName=\\"id\\")]
        public long? Id { get; }

        /// <summary>
        /// Gets Username
        /// </summary>
        [JsonProperty(PropertyName=\\"username\\")]
        public string Username { get; }

        /// <summary>
        /// Gets FirstName
        /// </summary>
        [JsonProperty(PropertyName=\\"firstName\\")]
        public string FirstName { get; }

        /// <summary>
        /// Gets LastName
        /// </summary>
        [JsonProperty(PropertyName=\\"lastName\\")]
        public string LastName { get; }

        /// <summary>
        /// Gets Email
        /// </summary>
        [JsonProperty(PropertyName=\\"email\\")]
        public string Email { get; }

        /// <summary>
        /// Gets Password
        /// </summary>
        [JsonProperty(PropertyName=\\"password\\")]
        public string Password { get; }

        /// <summary>
        /// Gets Phone
        /// </summary>
        [JsonProperty(PropertyName=\\"phone\\")]
        public string Phone { get; }

        /// <summary>
        /// Gets User Status
        /// </summary>
        [JsonProperty(PropertyName=\\"userStatus\\")]
        public int? UserStatus { get; }

        public override bool Equals(object obj)
        {
            if (obj is null) return false;
            if (ReferenceEquals(this, obj)) return true;
            return obj.GetType() == GetType() && Equals((User)obj);
        }

        public bool Equals(User other)
        {
            if (other is null) return false;
            if (ReferenceEquals(this, other)) return true;

            return 
                (
                    Id == other.Id ||
                    Id != null &&
                    Id.Equals(other.Id)
                ) && 
                (
                    Username == other.Username ||
                    Username != null &&
                    Username.Equals(other.Username)
                ) && 
                (
                    FirstName == other.FirstName ||
                    FirstName != null &&
                    FirstName.Equals(other.FirstName)
                ) && 
                (
                    LastName == other.LastName ||
                    LastName != null &&
                    LastName.Equals(other.LastName)
                ) && 
                (
                    Email == other.Email ||
                    Email != null &&
                    Email.Equals(other.Email)
                ) && 
                (
                    Password == other.Password ||
                    Password != null &&
                    Password.Equals(other.Password)
                ) && 
                (
                    Phone == other.Phone ||
                    Phone != null &&
                    Phone.Equals(other.Phone)
                ) && 
                (
                    UserStatus == other.UserStatus ||
                    UserStatus != null &&
                    UserStatus.Equals(other.UserStatus)
                );
        }

        /// <summary>
        /// Gets the hash code
        /// </summary>
        /// <returns>Hash code</returns>
        public override int GetHashCode()
        {
            unchecked // Overflow is fine, just wrap
            {
                var hashCode = 41;
                if (Id != null)
                    hashCode = hashCode * 59 + Id.GetHashCode();
                if (Username != null)
                    hashCode = hashCode * 59 + Username.GetHashCode();
                if (FirstName != null)
                    hashCode = hashCode * 59 + FirstName.GetHashCode();
                if (LastName != null)
                    hashCode = hashCode * 59 + LastName.GetHashCode();
                if (Email != null)
                    hashCode = hashCode * 59 + Email.GetHashCode();
                if (Password != null)
                    hashCode = hashCode * 59 + Password.GetHashCode();
                if (Phone != null)
                    hashCode = hashCode * 59 + Phone.GetHashCode();
                if (UserStatus != null)
                    hashCode = hashCode * 59 + UserStatus.GetHashCode();
                return hashCode;
            }
        }
    }
}"
`;

exports[`dotnetcore-server-interfaces petstore.yaml can generate the files 10`] = `
"/*
 * Swagger Petstore
 *
 * This is a sample server Petstore server.  You can find out more about Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).  For this sample, you can use the api key \`special-key\` to test the authorization filters.
 *
 * OpenAPI spec version: 1.0.0
 * Contact: apiteam@swagger.io
 * Generated by: https://openapi-generator.tech
 */
using System;
using System.Collections.Generic;
using System.Threading.Tasks;
using Microsoft.AspNetCore.Authorization;
using Microsoft.AspNetCore.Mvc;
using Newtonsoft.Json;
using System.ComponentModel.DataAnnotations;
#nullable enable
#nullable disable warnings

namespace PrincipleStudios.Demo
{ 
    /// <summary>
    /// 
    /// </summary>
    public interface IUserApiClient
    { 
        /// <summary>
        /// Create user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"user\\">Created user object</param>
        Task<UserApiClient.TypeSafeCreateUserResult> CreateUser(
            User user);

        /// <summary>
        /// Creates list of users with given input array
        /// </summary>
        /// <param name=\\"user\\">List of user object</param>
        Task<UserApiClient.TypeSafeCreateUsersWithArrayInputResult> CreateUsersWithArrayInput(
            IReadOnlyList<User> user);

        /// <summary>
        /// Creates list of users with given input array
        /// </summary>
        /// <param name=\\"user\\">List of user object</param>
        Task<UserApiClient.TypeSafeCreateUsersWithListInputResult> CreateUsersWithListInput(
            IReadOnlyList<User> user);

        /// <summary>
        /// Delete user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"username\\">The name that needs to be deleted</param>
        Task<UserApiClient.TypeSafeDeleteUserResult> DeleteUser(
            string username);

        /// <summary>
        /// Get user by user name
        /// </summary>
        /// <param name=\\"username\\">The name that needs to be fetched. Use user1 for testing. </param>
        Task<UserApiClient.TypeSafeGetUserByNameResult> GetUserByName(
            string username);

        /// <summary>
        /// Logs user into the system
        /// </summary>
        /// <param name=\\"username\\">The user name for login</param>
        /// <param name=\\"password\\">The password for login in clear text</param>
        Task<UserApiClient.TypeSafeLoginUserResult> LoginUser(
            string username,
            string password);

        /// <summary>
        /// Logs out current logged in user session
        /// </summary>
        Task<UserApiClient.TypeSafeLogoutUserResult> LogoutUser();

        /// <summary>
        /// Updated user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"username\\">name that need to be updated</param>
        /// <param name=\\"user\\">Updated user object</param>
        Task<UserApiClient.TypeSafeUpdateUserResult> UpdateUser(
            string username,
            User user);
    }

    public class UserApiClientConfiguration
    {
        public string BaseUrl { get; set; }
    }

    /// <summary>
    /// 
    /// </summary>
    public sealed class UserApiClient : IUserApiClient
    {
        private readonly HttpClient httpClient;
        private readonly UserApiClientConfiguration configuration;

        public UserApiClient(HttpClient httpClient, UserApiClientConfiguration configuration)
        {
            this.httpClient = httpClient;
            this.configuration = configuration;
        }

        /// <summary>
        /// Create user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"user\\">Created user object</param>
        public Task<TypeSafeCreateUserResult> CreateUser(
            User user) =>
            throw new NotImplementedException();

        /// <summary>
        /// Creates list of users with given input array
        /// </summary>
        /// <param name=\\"user\\">List of user object</param>
        public Task<TypeSafeCreateUsersWithArrayInputResult> CreateUsersWithArrayInput(
            IReadOnlyList<User> user) =>
            throw new NotImplementedException();

        /// <summary>
        /// Creates list of users with given input array
        /// </summary>
        /// <param name=\\"user\\">List of user object</param>
        public Task<TypeSafeCreateUsersWithListInputResult> CreateUsersWithListInput(
            IReadOnlyList<User> user) =>
            throw new NotImplementedException();

        /// <summary>
        /// Delete user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"username\\">The name that needs to be deleted</param>
        public Task<TypeSafeDeleteUserResult> DeleteUser(
            string username) =>
            throw new NotImplementedException();

        /// <summary>
        /// Get user by user name
        /// </summary>
        /// <param name=\\"username\\">The name that needs to be fetched. Use user1 for testing. </param>
        public Task<TypeSafeGetUserByNameResult> GetUserByName(
            string username) =>
            throw new NotImplementedException();

        /// <summary>
        /// Logs user into the system
        /// </summary>
        /// <param name=\\"username\\">The user name for login</param>
        /// <param name=\\"password\\">The password for login in clear text</param>
        public Task<TypeSafeLoginUserResult> LoginUser(
            string username,
            string password) =>
            throw new NotImplementedException();

        /// <summary>
        /// Logs out current logged in user session
        /// </summary>
        public Task<TypeSafeLogoutUserResult> LogoutUser() =>
            throw new NotImplementedException();

        /// <summary>
        /// Updated user
        /// </summary>
        /// <remarks>This can only be done by the logged in user.</remarks>
        /// <param name=\\"username\\">name that need to be updated</param>
        /// <param name=\\"user\\">Updated user object</param>
        public Task<TypeSafeUpdateUserResult> UpdateUser(
            string username,
            User user) =>
            throw new NotImplementedException();


        public readonly struct TypeSafeCreateUserResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeCreateUserResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeCreateUserResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeCreateUserResult OtherStatusCode(int statusCode) =>
                new TypeSafeCreateUserResult(statusCode);
        }


        public readonly struct TypeSafeCreateUsersWithArrayInputResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeCreateUsersWithArrayInputResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeCreateUsersWithArrayInputResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeCreateUsersWithArrayInputResult OtherStatusCode(int statusCode) =>
                new TypeSafeCreateUsersWithArrayInputResult(statusCode);
        }


        public readonly struct TypeSafeCreateUsersWithListInputResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeCreateUsersWithListInputResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeCreateUsersWithListInputResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeCreateUsersWithListInputResult OtherStatusCode(int statusCode) =>
                new TypeSafeCreateUsersWithListInputResult(statusCode);
        }


        public readonly struct TypeSafeDeleteUserResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeDeleteUserResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeDeleteUserResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid username supplied</summary>
            public static TypeSafeDeleteUserResult StatusCode400() =>
                new TypeSafeDeleteUserResult(400);

            /// <summary>User not found</summary>
            public static TypeSafeDeleteUserResult StatusCode404() =>
                new TypeSafeDeleteUserResult(404);
        }


        public readonly struct TypeSafeGetUserByNameResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeGetUserByNameResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeGetUserByNameResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeGetUserByNameResult StatusCode200(User result) =>
                new TypeSafeGetUserByNameResult(200, result);

            /// <summary>Invalid username supplied</summary>
            public static TypeSafeGetUserByNameResult StatusCode400() =>
                new TypeSafeGetUserByNameResult(400);

            /// <summary>User not found</summary>
            public static TypeSafeGetUserByNameResult StatusCode404() =>
                new TypeSafeGetUserByNameResult(404);
        }


        public readonly struct TypeSafeLoginUserResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeLoginUserResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeLoginUserResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeLoginUserResult StatusCode200(string result) =>
                new TypeSafeLoginUserResult(200, result);

            /// <summary>Invalid username/password supplied</summary>
            public static TypeSafeLoginUserResult StatusCode400() =>
                new TypeSafeLoginUserResult(400);
        }


        public readonly struct TypeSafeLogoutUserResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeLogoutUserResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeLogoutUserResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>successful operation</summary>
            public static TypeSafeLogoutUserResult OtherStatusCode(int statusCode) =>
                new TypeSafeLogoutUserResult(statusCode);
        }


        public readonly struct TypeSafeUpdateUserResult
        {
            public readonly object? resultObject;
            public readonly int statusCode;

            private TypeSafeUpdateUserResult(int statusCode)
            {
                this.hasResultObject = false;
                this.resultObject = null;
                this.statusCode = statusCode;
            }

            private TypeSafeUpdateUserResult(int statusCode, object? resultObject)
            {
                this.hasResultObject = true;
                this.resultObject = resultObject;
                this.statusCode = statusCode;
            }

            /// <summary>Invalid user supplied</summary>
            public static TypeSafeUpdateUserResult StatusCode400() =>
                new TypeSafeUpdateUserResult(400);

            /// <summary>User not found</summary>
            public static TypeSafeUpdateUserResult StatusCode404() =>
                new TypeSafeUpdateUserResult(404);
        }

    }
}"
`;
